# cmount

./: .clang-format  .gitignore  CMakeLists.txt  build.md  build.py  components.cmake  license.md  readme.md  structure.cmake  vendor.cmake
dart-server/: CMakeLists.txt
dart-server/src/: main.c
dev/: cmake_structure.md  project_definition_en.md  project_goal_de.md
docs/: CMakeLists.txt  libraries.md
include/: core.h  parse.h
include/core/: log.h  resources.h  resreader.h
jit/: CMakeLists.txt
jit/src/: main.c
resources/: CMakeLists.txt  messages.yaml
resources/internal/: messages.yaml.in  paths.yaml.in  paths.yaml.template
resources/templates/app/: .gitignore  spec.yaml
runtime/: CMakeLists.txt
runtime/config/: display.yaml.in
runtime/internal/: messages.yaml.in  paths.yaml.in
src/: cllvm.cmake  core.cmake  list.c  list.h  log.cmake  main.c  main.cmake  parse.cmake  parser.cmake  runner.cmake  test.cmake  tests.cmake
src/core/: common.c  config.c  log.c  logger.c  os.c  platform.c  resources.c  resreader.c  yaml_parse.c
src/main/: main.c  tasks.h
src/main/runner/: runner.c
src/main/schema/: messages.c  messages.h  paths.c  paths.h
src/main/tasks/: build.c  config.c  create.c  create.h  doctor.c  get.c  install.c  run.c  upgrade.c  version.c
src/parse/: emit.c  resolve.c  resolve_yaml.c
src/parser/schema/: project.c  project.h
src/runner/: jit_engine.cpp  jit_engine.hpp
src/test/: logger_test.c  main_test.c  parse_test.c
src/tests/: main_test.c  parse_test.c
