
set(CONFIG_DIRECTORY_NAME config)
file(GLOB SRC_CONFIG_FILES ${CMAKE_SOURCE_DIR}/resources/${CONFIG_DIRECTORY_NAME}/*.yaml)
install(FILES ${SRC_CONFIG_FILES} DESTINATION runtime/${CONFIG_DIRECTORY_NAME})


set(SCRIPTS_DIRECTORY_NAME scripts)
file(GLOB SRC_SCRIPTS_FILES ${CMAKE_SOURCE_DIR}/resources/${SCRIPTS_DIRECTORY_NAME}/*.yaml)
install(FILES ${SRC_SCRIPTS_FILES} DESTINATION runtime/${SCRIPTS_DIRECTORY_NAME})

file(GLOB SRC_INTERNAL_FILES ${CMAKE_SOURCE_DIR}/resources/internal/*.yaml)
install(FILES ${SRC_INTERNAL_FILES} DESTINATION ${OUT_INTERNAL_DIRECTORY})
